--- a/svmdev-web.cabal
+++ b/svmdev-web.cabal
@@ -19,6 +19,7 @@ executable svmdev-web
   build-depends:       base
                      , reflex
                      , reflex-dom
+                     , containers
   default-language:    Haskell2010
 
 source-repository head
