Move builds to dist/html

--- a/package.json
+++ b/package.json
@@ -2,19 +2,19 @@
   "name": "svmdev-web",
   "author": "Wei Tang",
   "scripts": {
-    "scss": "mkdir -p dist/ && node-sass --output-style compressed static/scss/style.scss dist/css/style.css",
-    "autoprefixer": "postcss -u autoprefixer -r dist/css/style.css dist/css/style.css",
-    "uglify": "mkdir -p dist/ && uglifyjs dist/lib.js -o dist/lib.js -c -m && uglifyjs dist/rts.js -o dist/rts.js -c -m && uglifyjs dist/out.js -o dist/out.js -c -m",
-    "copy:stackbuild": "mkdir -p dist/ && cp -R dist/build/svmdev-web/svmdev-web.jsexe/. dist",
-    "clean:haskell:full": "stack clean --full",
+    "scss": "mkdir -p dist/html/ && node-sass --output-style compressed static/scss/style.scss dist/html/css/style.css",
+    "autoprefixer": "postcss -u autoprefixer -r dist/html/css/style.css dist/html/css/style.css",
+    "uglify": "mkdir -p dist/html/ && uglifyjs dist/html/lib.js -o dist/html/lib.js -c -m && uglifyjs dist/html/rts.js -o dist/html/rts.js -c -m && uglifyjs dist/html/out.js -o dist/html/out.js -c -m",
+    "copy:stackbuild": "mkdir -p dist/html/ && cp -R dist/build/svmdev-web/svmdev-web.jsexe/. dist/html",
     "clean:haskell": "cabal clean",
-    "clean:dist": "rm -rf dist && mkdir -p dist/",
+    "clean:dist": "rm -rf dist",
     "clean:all": "npm run clean:haskell && npm run clean:dist",
     "build:js": "make build && npm run copy:stackbuild && npm run uglify",
+    "build:js-dev": "make build && npm run copy:stackbuild",
     "build:css": "npm run scss && npm run autoprefixer",
-    "build:dist": "mkdir -p dist/ && npm run build:js && npm run build:css",
-    "serve": "browser-sync start --server 'dist/' --files 'dist/css/*.css, dist/*.js, **/*.html, !node_modules/**/*.html'",
-    "watch:index": "onchange 'app/Main.hs' -- npm run build:js",
+    "build:dist": "mkdir -p dist/html/ && npm run build:js && npm run build:css",
+    "serve": "browser-sync start --server 'dist/html/' --files 'dist/html/css/*.css, dist/html/*.js, **/*.html, !node_modules/**/*.html'",
+    "watch:index": "onchange 'app/Main.hs' -- npm run build:js-dev",
     "watch:css": "onchange 'static/scss/*.scss' -- npm run build:css",
     "watch:all": "npm-run-all -p serve watch:index watch:css"
   },
