--- a/svmdev-web.cabal
+++ b/svmdev-web.cabal
@@ -20,6 +20,7 @@ executable svmdev-web
                      , reflex
                      , reflex-dom
                      , containers
+                     , text
   default-language:    Haskell2010
 
 source-repository head
