--- a/svmdev-web.cabal
+++ b/svmdev-web.cabal
@@ -21,6 +21,7 @@ executable svmdev-web
                      , reflex-dom
                      , containers
                      , text
+                     , aeson
   default-language:    Haskell2010
 
 source-repository head
