--- a/svmdev-web.cabal
+++ b/svmdev-web.cabal
@@ -22,6 +22,8 @@ executable svmdev-web
                      , containers
                      , text
                      , aeson
+  if !impl(ghcjs)
+    build-depends:     ghcjs-base-stub
   default-language:    Haskell2010
 
 source-repository head
